add slice pattern zustand update

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alata&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -56,4 +62,108 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+.cubic-bezier-animation-1 {
+  transition: all 0.3s cubic-bezier(0, 1, 0, 1);
+}
+
+.cubic-bezier-animation-2 {
+  transition: all 0.3s cubic-bezier(1, 0, 1, 0);
+}
+
+.cubic-bezier-animation-a {
+  overflow: hidden;
+  max-height: 0;
+  transition: all 0.3s cubic-bezier(0, 1, 0, 1);
+}
+
+.cubic-bezier-animation-b {
+  display: block;
+  height: auto;
+  max-height: 9999px;
+  transition: all 0.3s cubic-bezier(1, 0, 1, 0);
+}
+
+input[type='range'] {
+  appearance: none;
+  -webkit-appearance: none;
+  height: 5px;
+  border-radius: 5px;
+  /* background: var(--slider-range-color); */
+  background: var(--muted-foreground-input);
+  background-image: linear-gradient(hsl(var(--primary)), hsl(var(--primary)));
+  background-repeat: no-repeat;
+}
+
+input[type='range']::-webkit-slider-thumb {
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  background: hsl(var(--background));
+  cursor: pointer;
+  /* box-shadow: 0 0 2px 0 var(--slider-thumb-color); */
+  box-shadow: hsl(var(--primary)) 0px 0px 0px 5px inset;
+  -webkit-appearance: none;
+  transition: all 350ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+    left 350ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+    bottom 350ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+}
+
+input[type='range']::-webkit-slider-runnable-track {
+  -webkit-appearance: none;
+  box-shadow: none;
+  border: none;
+  background: transparent;
+}
+
+input[type='range']::-webkit-slider-thumb:hover {
+  box-shadow: hsl(var(--primary)) 0px 0px 0px 3px inset;
+}
+
+input[type='range']::-webkit-slider-thumb:active {
+  box-shadow: hsl(var(--primary)) 0px 0px 0px 5px inset;
+  transition: all 350ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+    left 350ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+    bottom 350ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+}
+
+.custom-slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: var(--muted-foreground-input);
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  border-radius: 100px;
+}
+
+.custom-slider:before {
+  position: absolute;
+  content: '';
+  height: 15px;
+  width: 15px;
+  left: 5px;
+  bottom: 5px;
+  background-color: hsl(var(--background));
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  border-radius: 100px;
+}
+
+input:checked + .custom-slider {
+  background-color: hsl(var(--foreground));
+}
+
+input:focus + .custom-slider {
+  box-shadow: 0 0 1px hsl(var(--background));
+}
+
+input:checked + .custom-slider:before {
+  -webkit-transform: translateX(20px);
+  -ms-transform: transrgb(47, 60, 47) (26px);
+  transform: translateX(20px);
 }
