--- a/styles/globals.css
+++ b/styles/globals.css
@@ -86,32 +86,35 @@
 }
 
 input[type='range'] {
+  width: 100%;
+  height: 5px;
+  background: hsl(var(--input));
+  background-image: linear-gradient(hsl(var(--primary)), hsl(var(--primary)));
+  border-radius: 5px;
+  background-repeat: no-repeat;
   appearance: none;
   -webkit-appearance: none;
-  height: 5px;
-  border-radius: 5px;
-  /* background: var(--slider-range-color); */
-  background: var(--muted-foreground-input);
-  background-image: linear-gradient(hsl(var(--primary)), hsl(var(--primary)));
-  background-repeat: no-repeat;
 }
 
 input[type='range']::-webkit-slider-thumb {
   height: 20px;
   width: 20px;
   border-radius: 50%;
-  background: hsl(var(--background));
+  background: hsl(0 0% 100%);
   cursor: pointer;
   /* box-shadow: 0 0 2px 0 var(--slider-thumb-color); */
   box-shadow: hsl(var(--primary)) 0px 0px 0px 5px inset;
   -webkit-appearance: none;
-  transition: all 350ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+  appearance: none;
+  transition:
+    all 350ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
     left 350ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
     bottom 350ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
 }
 
 input[type='range']::-webkit-slider-runnable-track {
   -webkit-appearance: none;
+  appearance: none;
   box-shadow: none;
   border: none;
   background: transparent;
@@ -123,7 +126,8 @@ input[type='range']::-webkit-slider-thumb:hover {
 
 input[type='range']::-webkit-slider-thumb:active {
   box-shadow: hsl(var(--primary)) 0px 0px 0px 5px inset;
-  transition: all 350ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+  transition:
+    all 350ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
     left 350ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
     bottom 350ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
 }
@@ -135,7 +139,7 @@ input[type='range']::-webkit-slider-thumb:active {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: var(--muted-foreground-input);
+  background-color: hsl(var(--muted-foreground) / 30%);
   -webkit-transition: 0.4s;
   transition: 0.4s;
   border-radius: 100px;
@@ -148,18 +152,18 @@ input[type='range']::-webkit-slider-thumb:active {
   width: 15px;
   left: 5px;
   bottom: 5px;
-  background-color: hsl(var(--background));
+  background-color: hsl(0 0% 100%);
   -webkit-transition: 0.4s;
   transition: 0.4s;
   border-radius: 100px;
 }
 
 input:checked + .custom-slider {
-  background-color: hsl(var(--foreground));
+  background-color: hsl(var(--primary));
 }
 
 input:focus + .custom-slider {
-  box-shadow: 0 0 1px hsl(var(--background));
+  box-shadow: 0 0 1px hsl(var(--primary));
 }
 
 input:checked + .custom-slider:before {
